--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.7.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
